<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_marginBottom="15dp"
    android:padding="20dp"
    android:background="@drawable/customborder"
    tools:ignore="UseSwitchCompatOrMaterialXml">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginBottom="5dp">




        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#61A431"
            android:onClick="starton"
            android:text="@string/start_date"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/reminder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#6BB84F"
            android:layout_weight="1"
            android:contentDescription="@string/reminder_button_description"
            android:foregroundTint="#9C3131"
            android:src="@android:drawable/ic_popup_reminder" />

        <CheckBox
            android:id="@+id/task_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/black" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="51dp"
            android:layout_height="47dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:backgroundTint="#2EBC40"
            android:backgroundTintMode="src_over"
            android:layout_weight="1"
            android:contentDescription="@string/edit_task_description"
            android:foregroundTint="@color/delete_button_bg"
            android:onClick="editTask"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="51dp"
            android:layout_height="47dp"
            android:layout_gravity="center_vertical"
            android:background="@color/delete_button_bg"
            android:backgroundTintMode="screen"
            android:layout_weight="1"
            android:contentDescription="@string/delete_task_description"
            android:onClick="deleteTask"
            android:src="@android:drawable/ic_menu_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/task_text_view"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext_background"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/task_description"
            android:elevation="8dp"
            android:enabled="false"
            android:fontFamily="@font/robo5"
            android:lineSpacingExtra="3dp"
            android:padding="6dp"
            android:textAlignment="center"
            android:layout_marginRight="9dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="?textInputOutlinedExposedDropdownMenuStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:boxBackgroundColor="#61A431"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconTint="@color/white"
        app:hintEnabled="false">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/set_priority"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/set_priority"
            android:inputType="none"
            android:minHeight="20dp"
            android:padding="0dp"
            android:textColor="@color/white"
            android:textColorHint="#ccc"
            android:textSize="13dp"
            app:simpleItems="@array/priorities" />
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_width="match_parent"
        android:layout_height= "4dp"
        android:layout_marginTop="4dp"
        android:background="@color/green" />
</LinearLayout>
